--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-Hello World
+<!DOCTYPE html>
+<html class="HollandEmery_com">
+<head>
+
+
+</head>
+
+<body>
+
+
+</body>
+
+<footer id = "foot">
+
+Made by Holland Emery
+
+</footer>
+
+</html>
