--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html class="HollandEmery_com">
 <head>
-
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
 <body>
+    <div class = "begining">
+        <div class = "name">
+            <h1>Holland Emery</h1>
+        </div>
 
+    </div>
 
 </body>
 
