--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 
 <body>
     <div class = "begining">
-        <div class = "name">
-            <h1>Holland Emery</h1>
+        <div class = "image">
+            <center><img src="test.jpg" alt="test" style="width:200px;height:200px;"></center>>
         </div>
-
+        <div class = "name">
+            <center><h1>Holland Emery</h1></center>
+        </div>
+        <div class="links">
+            
+        </div>
     </div>
 
 </body>
