--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html class="HollandEmery_com">
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css"></link>
 
 </head>
 
 <body>
     <div class = "begining">
         <div class = "image">
-            <center><img src="test.jpg" alt="test" style="width:200px;height:200px;"></center>>
+            <center><img src="test.jpg" alt="test" style="width:200px;height:200px;"></center>
         </div>
         <div class = "name">
             <center><h1>Holland Emery</h1></center>
