frame for website

--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
 
 <body>
     <div class = "begining">
-        <div class = "image">
-            <center><img src="test.jpg" alt="test" style="width:200px;height:200px;"></center>
-        </div>
-        <div class = "name">
-            <center><h1>Holland Emery</h1></center>
-        </div>
-        <div class="links">
-            
-        </div>
+            <h1 class = "name">Holland Emery </h1>
+            <img id="image" src="test.jpg" alt="test" style="width:28%;">
+    </div>
+    <div class="links">
+        <center>
+            <a href="https://www.linkedin.com/in/holland-emery-931518144/"><button>Linkedin</button></a>
+            <a href="https://github.com/HollandEmery"><button>Github</button></a>
+            <a href="mailto:HollandEmery2@gmail.com"><button>Email</button></a>
+            <button>Resume</button>
+        </center>
+    </div>
+    <div class = "projects">
+
+
     </div>
 
 </body>
 
 <footer id = "foot">
 
-Made by Holland Emery
+<center>Made by Holland Emery</center>
 
 </footer>
 
