--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 
 <body>
     <div class = "begining">
+            <center>
             <h1 class = "name">Holland Emery </h1>
-            <img id="image" src="test.jpg" alt="test" style="width:28%;">
+            <!--<img id="image" src="test.jpg" alt="test" style="width:28%;">-->
+            <p class="info">University of Maryland</p>
+            </center>
     </div>
     <div class="links">
         <center>
             <a href="https://www.linkedin.com/in/holland-emery-931518144/"><button>Linkedin</button></a>
-            <a href="https://github.com/HollandEmery"><button>Github</button></a>
+            <a href="https://github.com/HollandEmery"><button><img src="testimg.png" id = "git" style="background: transparent;"></button></a>
             <a href="mailto:HollandEmery2@gmail.com"><button>Email</button></a>
             <button>Resume</button>
         </center>
@@ -24,11 +27,5 @@
     </div>
 
 </body>
-
-<footer id = "foot">
-
-<center>Made by Holland Emery</center>
-
-</footer>
 
 </html>
