--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
             <center>
             <h1 class = "name">Holland Emery </h1>
             <!--<img id="image" src="test.jpg" alt="test" style="width:28%;">-->
-            <p class="info">University of Maryland</p>
+            <p class="info">University of Maryland Student</p>
             </center>
     </div>
     <div class="links">
         <center>
-            <a href="https://www.linkedin.com/in/holland-emery-931518144/"><button>Linkedin</button></a>
-            <a href="https://github.com/HollandEmery"><button><img src="testimg.png" id = "git" style="background: transparent;"></button></a>
-            <a href="mailto:HollandEmery2@gmail.com"><button>Email</button></a>
-            <button>Resume</button>
+            <a href="https://www.linkedin.com/in/holland-emery-931518144/"><img src="linkedin.png" class="buttons"></a>
+            <a href="https://github.com/HollandEmery"><img src="githublogo.png" class="buttons"></a>
+            <a href="mailto:HollandEmery2@gmail.com"><img src="email.png" class="buttons"></a>
+            <a href="test"><img src="resume.png" class="buttons"></a>
         </center>
     </div>
     <div class = "projects">
