--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     </div>
     <div class="links">
         <center>
-            <a href="https://www.linkedin.com/in/holland-emery-931518144/"><img src="linkedin.png" class="buttons"></a>
-            <a href="https://github.com/HollandEmery"><img src="githublogo.png" class="buttons"></a>
-            <a href="mailto:HollandEmery2@gmail.com"><img src="email.png" class="buttons"></a>
-            <a href="test"><img src="resume.png" class="buttons"></a>
+            <a href="https://www.linkedin.com/in/holland-emery-931518144/"><img src="images/linkedin.png" class="buttons"></a>
+            <a href="https://github.com/HollandEmery"><img src="images/githublogo.png" class="buttons"></a>
+            <a href="mailto:HollandEmery2@gmail.com"><img src="images/email.png" class="buttons"></a>
+            <a href="test"><img src="images/resume.png" class="buttons"></a>
         </center>
     </div>
     <div class = "projects">
