--- a/projects.html
+++ b/projects.html
@@ -10,15 +10,20 @@
         
         <div class="projectbounds">
             <div class = "project">
-                <img src="images/placeholder.png" class="projectimg">
+                <div class="imgbounds">
+                    <img src="images/RiddleMeAppLogo.png" class="projectimg">
+                </div>
                 <h2 class="projectname">Riddle Me</h2>
                 <p class="language">python, javascipt</p>
-                <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                <a href="https://github.com/RyanBerger98/RiddleMeFinal"><button>Code</button></a>
+                <p class="desc">This project is a location based puzzle game that I made with some friends at HopHacks, a Hackithon hosted by
+                    John's Hopkins University. for this project I wrote server side python and helped create a website for the app
+                </p>
+                <a href="https://github.com/RyanBerger98/RiddleMeFinal"><button class="code">Code</button></a>
             </div>
             <div class = "project">
-                <img src="images/placeholder.png" class="projectimg">
+                <div class="imgbounds">
+                    <img src="images/placeholder.png" class="projectimg">
+                </div>
                 <h2 class="projectname">Project Name</h2>
                 <p class="language">language</p>
                 <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
