--- a/projects.html
+++ b/projects.html
@@ -15,52 +15,79 @@
                 </div>
                 <h2 class="projectname">Riddle Me</h2>
                 <p class="language">python, javascipt</p>
+                <div class="textbounds">
                 <p class="desc">This project is a location based puzzle game that I made with some friends at HopHacks, a Hackithon hosted by
                     John's Hopkins University. for this project I wrote server side python and helped create a website for the app
                 </p>
+                </div>
                 <a href="https://github.com/RyanBerger98/RiddleMeFinal"><button class="code">Code</button></a>
             </div>
+
+            <div class = "project">
+                <div class = "imgbounds">
+                <img src="images/Buddha.png" class="projectimg">
+                </div>
+                <h2 class="projectname">Fractals</h2>
+                <p class="language">java</p>
+                <div class ="textbounds">
+                <p class="desc">This project mathematically calculates and draw eight different fractals including the
+                    Dragon curve, Mandelbrot Set, and Buddahbrot. All fractals were written solely by me except for the Julia set which was
+                    written with the help of my friend Gabe
+                </p>
+                </div>
+                <a href="https://github.com/HollandEmery/Fractals"><button class="code">Code</button></a>
+                </div>
+
+
             <div class = "project">
                 <div class="imgbounds">
-                    <img src="images/placeholder.png" class="projectimg">
+                <img src="images/Maze.png" class="projectimg">
+                </div>
+                <h2 class="projectname">Maze Creator</h2>
+                <p class="language">java</p>
+                <div class ="textbounds">
+                <p class="desc">This project randomly generates and then solves a maze of variable size with selectable start and end positions</p>
+                </div>
+                <a href="https://github.com/HollandEmery/Maze"><button class="code">Code</button></a>
+            </div>
+
+            <div class = "project">
+                <div class="imgbounds">
+                    <img src="images/ethereum.png" class="projectimg">
+                </div>
+                <h2 class="projectname">BlockTrivia</h2>
+                <p class="language">solidity</p>
+                <div class = "textbounds">
+                <p class="desc">During Hackital a solidity Hackithon hosted by GW I designed and wrote a trivia game on the ethereum BlockChain
+                </p>
+                </div>
+                <a href="https://github.com/seankchapman/BlockTrivia"><button class="code">Code</button></a>
+            </div>
+
+            <div class = "project">
+                <div class="imgbounds">
+                <img src="images/UMDCS.png" class="projectimg">
+                </div>
+                <h2 class="projectname">School Projects</h2>
+                <p class="language">java python C ruby ocaml</p>
+                <div class ="textbounds">
+                <p class="desc">Because these are projects for school and they are often resused the repository is private. If you would
+                    like to see the projects I have written for class please send me an email
+                </p>
+                </div>
+                <a href="mailto:HollandEmery2@gmail.com"><button class="code">Email</button></a>
+            </div>
+            <div class = "project">
+                <div class = "imgbounds">
+                <img src="images/placeholder.png" class="projectimg">
                 </div>
                 <h2 class="projectname">Project Name</h2>
                 <p class="language">language</p>
+                <div class ="textbounds">
                 <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
                     dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                <a href="temp"><button>Code</button></a>
-            </div>
-            <div class = "project">
-                <img src="images/placeholder.png" class="projectimg">
-                <h2 class="projectname">Project Name</h2>
-                <p class="language">language</p>
-                <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                <a href="temp"><button>Code</button></a>
-            </div>
-            <div class = "project">
-                <img src="images/placeholder.png" class="projectimg">
-                <h2 class="projectname">Project Name</h2>
-                <p class="language">language</p>
-                <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                <a href="temp"><button>Code</button></a>
-            </div>
-            <div class = "project">
-                <img src="images/placeholder.png" class="projectimg">
-                <h2 class="projectname">Project Name</h2>
-                <p class="language">language</p>
-                <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                <a href="temp"><button>Code</button></a>
-            </div>
-            <div class = "project">
-                <img src="images/placeholder.png" class="projectimg">
-                <h2 class="projectname">Project Name</h2>
-                <p class="language">language</p>
-                <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-                <a href="temp"><button>Code</button></a>
+                </div>
+                <a href="temp"><button class="code">Code</button></a>
             </div>
         </div>
     </body>
