--- a/projects.html
+++ b/projects.html
@@ -79,15 +79,16 @@
             </div>
             <div class = "project">
                 <div class = "imgbounds">
-                <img src="images/placeholder.png" class="projectimg">
+                <img src="images/NFLDraft.png" class="projectimg">
                 </div>
-                <h2 class="projectname">Project Name</h2>
-                <p class="language">language</p>
+                <h2 class="projectname">NFL Draft Success</h2>
+                <p class="language">Python SQL</p>
                 <div class ="textbounds">
-                <p class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
-                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+                <p class="desc">This project analysis stats of NFL players and the draft order since 1970 and calculates how draft number correlates
+                    to success in the NFL. I wrote this with my friene Ryan.
+                </p>
                 </div>
-                <a href="temp"><button class="code">Code</button></a>
+                <a href="https://bergeremery320.github.io/"><button class="code">Code</button></a>
             </div>
         </div>
     </body>
