changed Project page title

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 
-        <center><h1 class="head">Projects WIP</h1></center>
+        <center><h1 class="head">Projects</h1></center>
         
         <div class="projectbounds">
             <div class = "project">
