--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
             <center>
             <h1 class = "name">Holland Emery </h1>
             <!--<img id="image" src="test.jpg" alt="test" style="width:28%;">-->
-            <p class="info">University of Maryland Student</p>
+            <p class="info">Computer Science Student</p>
             </center>
     </div>
     <div class="links">
         <center>
-            <a href="https://www.linkedin.com/in/holland-emery"><img src="images/linkedin.png" class="buttons"></a>
-            <a href="https://github.com/HollandEmery"><img src="images/githublogo.png" class="buttons"></a>
-            <a href="mailto:HollandEmery2@gmail.com"><img src="images/email.png" class="buttons"></a>
-            <a href="images/Resume_September_15th.pdf"><img src="images/resume.png" class="buttons"></a>
-            <a href="projects.html"><img src="images/code.png" class="buttons"></a>
+            <ul class="list-links">
+                <li class='link-element'><a href="https://www.linkedin.com/in/holland-emery" target="_blank" title="LinkedIn"><img src="images/linkedin.png" class="buttons"></a></li>
+                <li class='link-element'><a href="https://github.com/HollandEmery" target="_blank" title="github"><img src="images/githublogo.png" class="buttons"></a></li>
+                <li class='link-element'><a href="mailto:HollandEmery2@gmail.com" title="HollandEmery2@gmail.com"><img src="images/email.png" class="buttons"></a></li>
+                <li class='link-element'><a href="images/Holland_Emery_Resume_Website.pdf" title="Resume" target="_blank"><img src="images/resume.png" class="buttons"></a></li>
+                <li class='link-element'><a href="projects.html" title="Projects"><img src="images/code.png" class="buttons"></a></li>
+            </ul>
         </center>
+
     </div>
     <div class = "projects">
 
