--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
         <div class="projectbounds">
             <div class = "project">
                 <div class="imgbounds">
-                    <img src="images/RiddleMeAppLogo.png" class="projectimg">
+                    <img src="images/projects/RiddleMeAppLogo.png" class="projectimg">
                 </div>
                 <h2 class="projectname">Riddle Me</h2>
                 <p class="language">python, javascipt</p>
@@ -25,7 +25,7 @@
 
             <div class = "project">
                 <div class = "imgbounds">
-                <img src="images/Buddha.png" class="projectimg">
+                <img src="images/projects/Buddha.png" class="projectimg">
                 </div>
                 <h2 class="projectname">Fractals</h2>
                 <p class="language">java</p>
@@ -41,7 +41,7 @@
 
             <div class = "project">
                 <div class="imgbounds">
-                <img src="images/Maze.png" class="projectimg">
+                <img src="images/projects/Maze.png" class="projectimg">
                 </div>
                 <h2 class="projectname">Maze Creator</h2>
                 <p class="language">java</p>
@@ -53,7 +53,7 @@
 
             <div class = "project">
                 <div class="imgbounds">
-                    <img src="images/ethereum.png" class="projectimg">
+                    <img src="images/projects/ethereum.png" class="projectimg">
                 </div>
                 <h2 class="projectname">BlockTrivia</h2>
                 <p class="language">solidity</p>
@@ -66,7 +66,7 @@
 
             <div class = "project">
                 <div class="imgbounds">
-                <img src="images/UMDCS.png" class="projectimg">
+                <img src="images/projects/UMDCS.png" class="projectimg">
                 </div>
                 <h2 class="projectname">School Projects</h2>
                 <p class="language">java python C ruby ocaml</p>
@@ -79,7 +79,7 @@
             </div>
             <div class = "project">
                 <div class = "imgbounds">
-                <img src="images/NFLDraft.png" class="projectimg">
+                <img src="images/projects/NFLDraft.png" class="projectimg">
                 </div>
                 <h2 class="projectname">NFL Draft Success</h2>
                 <p class="language">Python SQL</p>
