--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li class='link-element'><a href="https://www.linkedin.com/in/holland-emery" target="_blank" title="LinkedIn"><img src="images/linkedin.png" class="buttons"></a></li>
                 <li class='link-element'><a href="https://github.com/HollandEmery" target="_blank" title="github"><img src="images/githublogo.png" class="buttons"></a></li>
                 <li class='link-element'><a href="mailto:HollandEmery2@gmail.com" title="HollandEmery2@gmail.com"><img src="images/email.png" class="buttons"></a></li>
-                <li class='link-element'><a href="images/Holland_Emery_Resume_Website.pdf" title="Resume" target="_blank"><img src="images/resume.png" class="buttons"></a></li>
+                <li class='link-element'><a href="images/Resume_Website.pdf" title="Resume" target="_blank"><img src="images/resume.png" class="buttons"></a></li>
                 <li class='link-element'><a href="projects.html" title="Projects"><img src="images/code.png" class="buttons"></a></li>
             </ul>
         </center>
