--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class = "begining">
         <div class = "begin">
             <center>
-                <img src="images/logotransparent.png" class="photo">
+                <img src="images/logotransparent2.png" class="photo">
                 <h1 class = "name">Holland Emery </h1>
                 <!--<img id="image" src="test.jpg" alt="test" style="width:28%;">-->
                 <p class="info">Software Engineer</p>
